# pdfpdf

./: .gitignore  Cargo.toml  README.md  build.rs  makerelease  rustfmt.toml
examples/: circles.rs  dots.rs  images.rs  mandala.rs  plot.rs  slideshow.rs  spectrum.rs  text.rs
src/: build.rs  build_font_files.rs  build_metrics.rs  canvas.rs  chars.txt  codes.txt  encoding.rs  fontmetrics.rs  fontref.rs  fonts.rs  fontsource.rs  graphicsstate.rs  image.rs  lib.rs  outline.rs  text.rs  textobject.rs  util.rs
tests/: lib.rs
