[package]
name = "pdfpdf"
version = "0.2.0"
authors = ["Benjamin Kimock <kimockb@gmail.com>"]
license = "MIT/Apache-2.0"
build = "src/build.rs"

description = """
A Pretty Darn Fast library for creating PDF files.
Currently, only simple vector graphics and simple text are supported."""
repository = "https://github.com/saethlin/pdfpdf"
documentation = "https://docs.rs/pdfpdf"
readme = "README.md"

keywords = ["pdf", "PDF"]
categories = ["visualization"]

[dependencies]
deflate = "0.7"
lazy_static = "0.2"

[profile.release]
lto = true
panic = "abort"
