[package]
name = "pdfpdf"
version = "0.3.0"
authors = ["Benjamin Kimock <kimockb@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

description = """
A Pretty Darn Fast library for creating PDF files.
Currently, only simple vector graphics and simple text are supported.
"""
repository = "https://github.com/saethlin/pdfpdf"
documentation = "https://docs.rs/pdfpdf"
readme = "README.md"
build = "build.rs"

keywords = ["pdf", "PDF"]
categories = ["visualization"]

[dependencies]
deflate = "0.7"
png = "0.14"
ryu = "0.2"

[dev-dependencies]
rand = "0.6"

[profile.release]
debug = true
